--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ python:
   - "2.7"
 install:
   - python setup.py install
-script: nosetests --verbosity=2
+script:
+  - nosetests --verbosity=2 --nocapture
